out/production/WorkTask/objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>Car__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Car__c.IsValidForRent__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Car__c</referenceTo>
        <relationshipName>Rends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Email__c</fullName>
        <description>email</description>
        <label>Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <label>Sales Manager</label>
        <referenceTo>Sales__c</referenceTo>
        <relationshipName>Rends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EndDate__c</columns>
        <columns>StartDate__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Deal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>New_records_Open_only</fullName>
        <active>false</active>
        <description>User may create new record with status Open only</description>
        <errorConditionFormula>NOT(ISPICKVAL(Status__c, &apos;Open&apos;))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status could be only Open</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidationForDate</fullName>
        <active>true</active>
        <description>Start date couldn&apos;t be more then End date</description>
        <errorConditionFormula>StartDate__c  &gt;=  EndDate__c</errorConditionFormula>
        <errorMessage>Start date couldn&apos;t be more then End date</errorMessage>
    </validationRules>
</CustomObject>